Updated button styling, adjusted margin for better spacing, modified padding to ensure consistent button size, updated border colour and background colour for improved visibility, adjusted font colour for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,3 +152,18 @@ h2 {
     justify-content: center;
     padding: 0 35px;
 }
+
+.buttons button {
+    margin: 30px 30px;
+    padding: 5px;
+    height: 60px;
+    width: 150px;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    background: #0078d4;
+}
